# LinuxProcessMonitor

./: CMakeLists.txt
src/: controller.cpp  controller.hpp  main.cpp  proc_reader.cpp  proc_reader.hpp  process.hpp
